fix: ChartPage -> Title Alignment & moved reflectionbox summary under chartselectionbox

--- a/diversitytracker.web/src/pages/ChartPage.css
+++ b/diversitytracker.web/src/pages/ChartPage.css
@@ -2,7 +2,7 @@
 
 .chartpage-container{
     max-width: 575px;
-    padding: 12vh 7% 25vh 7%; 
+    padding: 7vh 7% 25vh 7%; 
     height: fit-content;
     cursor: default;
 }
@@ -161,7 +161,7 @@
 .chartpage__selectcharttype{
     display: flex;
     justify-content: space-around;
-    margin-top: 2rem;
+    margin-top: .5rem;
     margin-bottom: 2rem;
 }
     .chartpage__selectcharttype a{
@@ -170,10 +170,11 @@
         align-items: center;
         justify-content: center;
         z-index: 10;
+        width: 13%;
     }
     .chartpage__selectcharttype p{
         font-weight: 200;
-        font-size: .6rem;
+        font-size: .5rem;
         color: #f3f3f3;
     }
     
@@ -184,6 +185,14 @@
 /* animation */
     .chartpage__selectcharttype__anchor.active{
         transition: all 250ms ease-in-out;
+    }
+    .chartpage__selectcharttype__anchor svg{
+
+        transition: all 450ms ease-in-out;
+    }
+    .chartpage__selectcharttype__anchor.active svg{
+        transform: scale(1.04);
+        transition: all 450ms ease-in-out;
     }
     .chartpage__selectcharttype__anchor svg path{
         transition: all 250ms ease-in-out;
@@ -237,6 +246,7 @@
     margin: 5% 2% 0% 2%;
     display: flex;
     flex-direction: column;
+    height: fit-content;
 }
     .header-container__title{
         margin-left: -1%;
@@ -245,10 +255,13 @@
         font-weight: 400;
         color: #f3f3f3;
         margin-bottom: 2.5rem;
-        /* white-space: normal;
+        white-space: normal;
         overflow-wrap: break-word;
         word-break: normal;
-        margin-bottom: 9%;
+        margin-bottom: 4%;
+    }
+    .header-container__title div{
+        height: fit-content;
     }
     .header-container__reflection{
         margin: 3% 0% 3% 0%;
